@@ -1457,6 +1457,7 @@ doppelganger
 	being who ever joined in the fierce, mad, intoxicating revel
 	of the Dum-Dum.
 		[ Tarzan of the Apes, by Edgar Rice Burroughs ]
+~dungeon fern*
 dungeon*
 	At once as far as Angels kenn he views 
 	The dismal Situation waste and wilde, 
@@ -1475,6 +1476,16 @@ dungeon*
 	As far remov'd from God and light of Heav'n 
 	As from the Center thrice to th' utmost Pole. 
 		[ Paradise Lost, by John Milton ]
+dungeon fern*
+	These dreadful weeds have been driven to extinction on the
+	surface, yet deep within the dark and damp of the dungeon
+	they still flourish. When it detects the motion of nearby
+	creatures, the dungeon fern releases a deadly, poisonous
+	spore, which quickly detonates to propagate the species.
+
+	Residents of the dungeon have learned how not to disturb
+	the dungeon fern, and will attack its spores on sight to
+	keep them from overtaking their home.
 ~dwarf ??m*
 dwarf*
 	Dwarfs have faces like men (ugly men, with wrinkled, leathery
