@@ -87,6 +87,9 @@ experience(mtmp, nk)	/* return # of exp points for mtmp after nk killed */
 /*	For higher level monsters, an additional bonus is given */
 	if(mtmp->m_lev > 8) tmp += 50;
 
+/*	Dungeon fern spores give no experience */
+	if(mtmp->data == &mons[PM_DUNGEON_FERN_SPORE]) tmp = 0;
+
 #ifdef MAIL
 	/* Mail daemons put up no fight. */
 	if(mtmp->data == &mons[PM_MAIL_DAEMON]) tmp = 1;
