@@ -95,6 +95,8 @@
 	  - deep orcs
 	  - evil eyes
 	  - shambling horrors (from Sporkhack)
+	  - dungeon ferns
+	  - dungeon fern spores
 
 	* new levels:
 	  - Black market version with One-eyed Sam promoted to management
